--- a/app/views/shared/_tab_bar.html.erb
+++ b/app/views/shared/_tab_bar.html.erb
@@ -47,7 +47,7 @@
   </nav>
 
   <!-- Open New Run Modal Button -->
-  <button data-action="click->modal#open" data-modal-id="newRunModal" class="grid place-items-center grow-0 shrink-0 btn btn-primary p-4 rounded-full">
+  <button data-action="mousedown->modal#open" data-modal-id="newRunModal" class="grid place-items-center grow-0 shrink-0 btn btn-primary p-4 rounded-full">
     <%= inline_svg_tag 'icons/runner.svg', class: 'size-7' %>
     <span class="sr-only">New run</span>
   </button>
