--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -48,7 +48,7 @@
 
   <div class="relative flex items-center mb-6">
     <!-- Left Arrow -->
-    <button type="button" data-action="click->tabs#scrollLeft" data-tabs-target="leftArrow" class="opacity-0 pointer-events-none tab-container-scroll-left transition duration-300">
+    <button type="button" data-action="mousedown->tabs#scrollLeft" data-tabs-target="leftArrow" class="opacity-0 pointer-events-none tab-container-scroll-left transition duration-300">
       <%= inline_svg_tag 'icons/chevron-left.svg', class: 'size-5 text-soft' %>
     </button>
 
@@ -56,24 +56,24 @@
       <!-- Tab Indicator -->
       <span data-tabs-target="indicator" class="sliding-tab-indicator"></span>
 
-      <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
+      <button type="button" id="infoTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
         <%= inline_svg_tag 'icons/info.svg', class: 'size-5' %>
         <span>Member Info</span>
       </button>
 
-      <button type="button" id="badgesTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'badgesTab' ? 'btn-tab-active' : '' %>">
+      <button type="button" id="badgesTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'badgesTab' ? 'btn-tab-active' : '' %>">
         <%= inline_svg_tag 'icons/medal.svg', class: 'size-5' %>
         <span>Badges</span>
       </button>
 
-      <button type="button" id="trendsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'trendsTab' ? 'btn-tab-active' : '' %>">
+      <button type="button" id="trendsTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'trendsTab' ? 'btn-tab-active' : '' %>">
         <%= inline_svg_tag 'icons/arrow-trending-up.svg', class: 'size-5' %>
         <span>Trends</span>
       </button>
     </div>
 
     <!-- Right Arrow -->
-    <button type="button" data-action="click->tabs#scrollRight" data-tabs-target="rightArrow" class="opacity-0 pointer-events-none tab-container-scroll-right transition duration-300">
+    <button type="button" data-action="mousedown->tabs#scrollRight" data-tabs-target="rightArrow" class="opacity-0 pointer-events-none tab-container-scroll-right transition duration-300">
       <%= inline_svg_tag 'icons/chevron-right.svg', class: 'size-5 text-soft' %>
     </button>
   </div>
