--- a/app/views/teams/member/_trends_graphs.html.erb
+++ b/app/views/teams/member/_trends_graphs.html.erb
@@ -9,17 +9,17 @@
       <!-- Tab Indicator -->
       <span data-chart-type-target="indicator" class="sliding-tab-indicator"></span>
 
-      <button type="button" id="columnChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only btn-tab-active">
+      <button type="button" id="columnChart" data-chart-type-target="btn" data-action="mousedown->chart-type#select" class="btn-tab btn-tab-icon-only btn-tab-active">
         <%= inline_svg_tag 'icons/chart-column.svg', class: 'size-5' %>
         <span class="sr-only">Column Chart</span>
       </button>
 
-      <button type="button" id="lineChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only">
+      <button type="button" id="lineChart" data-chart-type-target="btn" data-action="mousedown->chart-type#select" class="btn-tab btn-tab-icon-only">
         <%= inline_svg_tag 'icons/chart-line.svg', class: 'size-5' %>
         <span class="sr-only">Line Chart</span>
       </button>
 
-      <button type="button" id="barChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only">
+      <button type="button" id="barChart" data-chart-type-target="btn" data-action="mousedown->chart-type#select" class="btn-tab btn-tab-icon-only">
         <%= inline_svg_tag 'icons/chart-bar.svg', class: 'size-5' %>
         <span class="sr-only">Bar Chart</span>
       </button>
@@ -50,17 +50,17 @@
       <!-- Tab Indicator -->
       <span data-chart-type-target="indicator" class="sliding-tab-indicator"></span>
 
-      <button type="button" id="columnChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only btn-tab-active">
+      <button type="button" id="columnChart" data-chart-type-target="btn" data-action="mousedown->chart-type#select" class="btn-tab btn-tab-icon-only btn-tab-active">
         <%= inline_svg_tag 'icons/chart-column.svg', class: 'size-5' %>
         <span class="sr-only">Column Chart</span>
       </button>
 
-      <button type="button" id="lineChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only">
+      <button type="button" id="lineChart" data-chart-type-target="btn" data-action="mousedown->chart-type#select" class="btn-tab btn-tab-icon-only">
         <%= inline_svg_tag 'icons/chart-line.svg', class: 'size-5' %>
         <span class="sr-only">Line Chart</span>
       </button>
 
-      <button type="button" id="barChart" data-chart-type-target="btn" data-action="click->chart-type#select" class="btn-tab btn-tab-icon-only">
+      <button type="button" id="barChart" data-chart-type-target="btn" data-action="mousedown->chart-type#select" class="btn-tab btn-tab-icon-only">
         <%= inline_svg_tag 'icons/chart-bar.svg', class: 'size-5' %>
         <span class="sr-only">Bar Chart</span>
       </button>
