--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -34,7 +34,7 @@
             <!-- Team Actions Dropdown Trigger -->
             <button
               type="button"
-              data-action="click->dropdown#toggle"
+              data-action="mousedown->dropdown#toggle"
               class="dropdown-toggle"
               >
               <span>Actions</span>
@@ -51,7 +51,7 @@
 
               <!-- Open Delete Team Modal Button -->
               <% if @current_user_owns_team %>
-                <button data-action="click->modal#open" data-modal-id="deleteTeam" class="dropdown-option-destructive">
+                <button data-action="mousedown->modal#open" data-modal-id="deleteTeam" class="dropdown-option-destructive">
                   <%= inline_svg_tag 'icons/trash.svg', class: 'size-5' %>
                   Delete team
                 </button>
@@ -71,7 +71,7 @@
 
   <div class="relative flex items-center mb-6">
     <!-- Left Arrow -->
-    <button type="button" data-action="click->tabs#scrollLeft" data-tabs-target="leftArrow" class="opacity-0 pointer-events-none tab-container-scroll-left transition duration-300">
+    <button type="button" data-action="mousedown->tabs#scrollLeft" data-tabs-target="leftArrow" class="opacity-0 pointer-events-none tab-container-scroll-left transition duration-300">
       <%= inline_svg_tag 'icons/chevron-left.svg', class: 'size-5 text-soft' %>
     </button>
 
@@ -79,40 +79,40 @@
       <!-- Tab Indicator -->
       <span data-tabs-target="indicator" class="sliding-tab-indicator"></span>
 
-      <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
+      <button type="button" id="infoTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'infoTab' ? 'btn-tab-active' : '' %>">
         <%= inline_svg_tag 'icons/info.svg', class: 'size-5' %>
         <span>Team Info</span>
       </button>
 
-      <button type="button" id="membersTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'membersTab' ? 'btn-tab-active' : '' %>">
+      <button type="button" id="membersTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'membersTab' ? 'btn-tab-active' : '' %>">
         <%= inline_svg_tag 'icons/team.svg', class: 'size-5' %>
         <span>Team Members</span>
       </button>
 
       <% if @current_user_owns_team %>
-        <button type="button" id="joinRequestsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'joinRequestsTab' ? 'btn-tab-active' : '' %>">
+        <button type="button" id="joinRequestsTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'joinRequestsTab' ? 'btn-tab-active' : '' %>">
           <%= inline_svg_tag 'icons/user-plus.svg', class: 'size-5' %>
           <span>Join Requests</span>
         </button>
       <% end %>
 
       <% if @current_user_member_of_team %>
-        <button type="button" id="rankingsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'rankingsTab' ? 'btn-tab-active' : '' %>">
+        <button type="button" id="rankingsTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'rankingsTab' ? 'btn-tab-active' : '' %>">
           <%= inline_svg_tag 'icons/arrow-transfer-vertical.svg', class: 'size-5' %>
           <span>Rankings</span>
         </button>
 
-        <button type="button" id="trendsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'trendsTab' ? 'btn-tab-active' : '' %>">
+        <button type="button" id="trendsTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'trendsTab' ? 'btn-tab-active' : '' %>">
           <%= inline_svg_tag 'icons/arrow-trending-up.svg', class: 'size-5' %>
           <span>Trends</span>
         </button>
 
-        <button type="button" id="featuredTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'featuredTab' ? 'btn-tab-active' : '' %>">
+        <button type="button" id="featuredTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'featuredTab' ? 'btn-tab-active' : '' %>">
           <%= inline_svg_tag 'icons/star.svg', class: 'size-5' %>
           <span>Featured</span>
         </button>
 
-        <button type="button" id="recentActivityTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'recentActivityTab' ? 'btn-tab-active' : '' %>">
+        <button type="button" id="recentActivityTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'recentActivityTab' ? 'btn-tab-active' : '' %>">
           <%= inline_svg_tag 'icons/clock.svg', class: 'size-5' %>
           <span>Recent Activity</span>
         </button>
@@ -120,7 +120,7 @@
     </div>
 
     <!-- Right Arrow -->
-    <button type="button" data-action="click->tabs#scrollRight" data-tabs-target="rightArrow" class="opacity-0 pointer-events-none tab-container-scroll-right transition duration-300">
+    <button type="button" data-action="mousedown->tabs#scrollRight" data-tabs-target="rightArrow" class="opacity-0 pointer-events-none tab-container-scroll-right transition duration-300">
       <%= inline_svg_tag 'icons/chevron-right.svg', class: 'size-5 text-soft' %>
     </button>
   </div>
