--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -13,7 +13,7 @@
           <span><%= sanitize notice %></span>
           <button
             type="button"
-            data-action="click->notifications#close"
+            data-action="mousedown->notifications#close"
             class="-my-1.5 -mr-1.5 bg-blue-50 text-blue-600 rounded-full focus:ring-2 focus:ring-blue-400 p-2 hover:bg-blue-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-blue-400 dark:hover:bg-slate-700 transition duration-200 ease-in-out"
             aria-label="Close">
             <span class="sr-only">Close</span>
@@ -34,7 +34,7 @@
           <span><%= sanitize success %></span>
           <button
             type="button"
-            data-action="click->notifications#close"
+            data-action="mousedown->notifications#close"
             class="-my-1.5 -mr-1.5 bg-green-50 text-green-600 rounded-full focus:ring-2 focus:ring-green-400 p-2 hover:bg-green-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-green-400 dark:hover:bg-slate-700 transition duration-200 ease-in-out"
             aria-label="Close">
             <span class="sr-only">Close</span>
@@ -55,7 +55,7 @@
           <span><%= sanitize error %></span>
           <button
             type="button"
-            data-action="click->notifications#close"
+            data-action="mousedown->notifications#close"
             class="-my-1.5 -mr-1.5 bg-red-50 text-red-600 rounded-full focus:ring-2 focus:ring-red-400 p-2 hover:bg-red-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-red-400 dark:hover:bg-slate-700 transition duration-200 ease-in-out"
             aria-label="Close">
             <span class="sr-only">Close</span>
@@ -76,7 +76,7 @@
           <span><%= sanitize alert %></span>
           <button
             type="button"
-            data-action="click->notifications#close"
+            data-action="mousedown->notifications#close"
             class="-my-1.5 -mr-1.5 bg-yellow-50 text-yellow-600 rounded-full focus:ring-2 focus:ring-yellow-400 p-2 hover:bg-yellow-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-yellow-400 dark:hover:bg-slate-700 transition duration-200 ease-in-out"
             aria-label="Close">
             <span class="sr-only">Close</span>
