--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Open New Run Modal Button -->
-    <button data-action="click->modal#open" data-modal-id="newRunModal" class="btn btn-lg btn-primary mt-auto gap-3">
+    <button data-action="mousedown->modal#open" data-modal-id="newRunModal" class="btn btn-lg btn-primary mt-auto gap-3">
       <%= inline_svg_tag 'icons/runner.svg', class: 'size-5' %>
       <span>New run</span>
     </button>
