--- a/app/views/teams/shared/_team_links.html.erb
+++ b/app/views/teams/shared/_team_links.html.erb
@@ -40,7 +40,7 @@
     <% end %>
   <% end %>
 
-  <button data-action="click->modal#open" data-modal-id="leaveTeam" class="dropdown-option-destructive">
+  <button data-action="mousedown->modal#open" data-modal-id="leaveTeam" class="dropdown-option-destructive">
     <%= inline_svg_tag 'icons/trash.svg', class: 'size-5' %>
     Leave team
   </button>
