--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -17,7 +17,7 @@
 
     <div class="space-y-3 form-group">
       <div class="flex gap-x-2.5">
-        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="click->toggle-checkbox#toggle">
+        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="mousedown->toggle-checkbox#toggle">
           <span class="form-input-toggle-switch"></span>
           <%= settings_form.check_box :email_visible, { checked: @user.show_email?, class: 'sr-only', data: { restore_defaults_target: 'emailVisible', toggle_checkbox_target: 'checkbox' } }, true, false %>
         </div>
@@ -25,7 +25,7 @@
       </div>
 
       <div class="flex gap-x-2.5">
-        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="click->toggle-checkbox#toggle">
+        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="mousedown->toggle-checkbox#toggle">
           <span class="form-input-toggle-switch"></span>
           <%= settings_form.check_box :phone_visible, { checked: @user.show_phone?, class: 'sr-only', data: { restore_defaults_target: 'phoneVisible', toggle_checkbox_target: 'checkbox' } }, true, false %>
         </div>
@@ -59,9 +59,9 @@
         <div>
           <%= settings_form.radio_button :theme, 'light', checked: (@user.settings(:appearance).theme == 'light'), data: { theme_target: 'input', action: 'theme#change', restore_defaults_target: 'theme' }, class: 'hidden peer' %>
           <%= settings_form.label :theme_light, class: 'form-radio-card-label peer-checked:*:bg-indigo-100 dark:peer-checked:*:bg-indigo-900' do %>
-          <div class="p-2 rounded-md bg-slate-200 dark:bg-slate-700 shrink-0">
-            <%= inline_svg_tag 'icons/sun.svg', class: 'size-5 peer-checked:text-indigo-500' %>
-          </div>
+            <div class="p-2 rounded-md bg-slate-200 dark:bg-slate-700 shrink-0">
+              <%= inline_svg_tag 'icons/sun.svg', class: 'size-5 peer-checked:text-indigo-500' %>
+            </div>
 
             <div class="block !bg-transparent">
               <p class="w-full font-semibold">Light mode</p>
@@ -73,9 +73,9 @@
         <div>
           <%= settings_form.radio_button :theme, 'dark', checked: (@user.settings(:appearance).theme == 'dark'), data: { theme_target: 'input', action: 'theme#change', restore_defaults_target: 'theme' }, class: 'hidden peer' %>
           <%= settings_form.label :theme_dark, class: 'form-radio-card-label peer-checked:*:bg-indigo-100 dark:peer-checked:*:bg-indigo-900' do %>
-          <div class="p-2 rounded-md bg-slate-200 dark:bg-slate-700 shrink-0">
-            <%= inline_svg_tag 'icons/moon.svg', class: 'size-5 peer-checked:text-indigo-500' %>
-          </div>
+            <div class="p-2 rounded-md bg-slate-200 dark:bg-slate-700 shrink-0">
+              <%= inline_svg_tag 'icons/moon.svg', class: 'size-5 peer-checked:text-indigo-500' %>
+            </div>
 
             <div class="block !bg-transparent">
               <p class="w-full font-semibold">Dark mode</p>
@@ -93,7 +93,7 @@
 
     <div class="form-group">
       <div class="flex gap-x-2.5">
-        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="click->toggle-checkbox#toggle">
+        <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="mousedown->toggle-checkbox#toggle">
           <span class="form-input-toggle-switch"></span>
           <%= settings_form.check_box :in_app, { checked: @user.settings(:notifications).in_app, class: 'sr-only', data: { restore_defaults_target: 'inApp', toggle_checkbox_target: 'checkbox' } }, true, false %>
         </div>
