--- a/app/assets/stylesheets/custom/forms.css
+++ b/app/assets/stylesheets/custom/forms.css
@@ -24,8 +24,8 @@
     file:mr-4 file:py-2 file:px-6
     file:rounded-md file:border-0
     file:text-sm file:font-semibold
-    file:bg-indigo-50 file:text-indigo-700
-    hover:file:bg-indigo-100 dark:file:bg-indigo-600 dark:file:text-slate-100 dark:hover:file:text-slate-100 dark:hover:file:bg-indigo-700;
+    file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200
+    dark:file:bg-indigo-900 dark:file:text-indigo-100 dark:hover:file:bg-indigo-800;
   }
 
   /* Built in browser color picker with stylish controls. */
