style(ux): scale clickable elements on press
fix: missing mousedown action for run actions dropdown

--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -31,7 +31,7 @@
             <!-- Run Actions Dropdown Trigger -->
             <button
               type="button"
-              data-action=" ->dropdown#toggle"
+              data-action="mousedown->dropdown#toggle"
               class="dropdown-toggle"
               >
               <span>Actions</span>
