--- a/app/assets/stylesheets/custom/buttons.css
+++ b/app/assets/stylesheets/custom/buttons.css
@@ -1,9 +1,9 @@
 @layer components {
   .btn {
-    @apply inline-flex cursor-pointer items-center justify-center rounded-md px-6 py-2 text-center text-sm font-medium no-underline transition duration-200 ease-in-out focus:ring-2;
+    @apply inline-flex cursor-pointer items-center justify-center rounded-md px-6 py-2 text-center text-sm font-medium no-underline transition duration-200 ease-in-out focus:ring-2 active:scale-95;
 
     &.btn-lg {
-      @apply px-9 py-3 text-lg;
+      @apply px-9 py-3 text-lg active:scale-90;
     }
 
     &.btn-sm {
