--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -18,8 +18,16 @@
     @apply text-slate-800 dark:text-slate-100;
   }
 
+  .text-light {
+    @apply text-slate-700 dark:text-slate-300;
+  }
+
   .text-soft {
     @apply text-slate-600 dark:text-slate-400;
+  }
+
+  .text-muted {
+    @apply text-slate-500 dark:text-slate-500;
   }
 
   .row-numbers {
@@ -63,15 +71,15 @@
   }
 
   .dropdown-option {
-    @apply flex items-center gap-2.5 py-2 px-4 rounded transition duration-200 ease-in-out w-full hover:bg-slate-200/80 dark:hover:bg-slate-700/80;
+    @apply flex items-center gap-2.5 py-2 px-4 rounded text-sm transition duration-200 ease-in-out w-full hover:bg-slate-200/80 dark:hover:bg-slate-700/80;
   }
 
   .dropdown-option-primary {
-    @apply flex items-center gap-2.5 py-2 px-4 rounded transition duration-200 ease-in-out w-full hover:bg-indigo-100 dark:hover:bg-indigo-900/80 hover:text-indigo-700 dark:hover:text-indigo-200;
+    @apply flex items-center gap-2.5 py-2 px-4 rounded text-sm transition duration-200 ease-in-out w-full hover:bg-indigo-100 dark:hover:bg-indigo-900/80 hover:text-indigo-700 dark:hover:text-indigo-200;
   }
 
   .dropdown-option-destructive {
-    @apply flex items-center gap-2.5 py-2 px-4 rounded transition duration-200 ease-in-out w-full hover:bg-rose-100 dark:hover:bg-rose-900/80 hover:text-rose-700 dark:hover:text-rose-200;
+    @apply flex items-center gap-2.5 py-2 px-4 rounded text-sm transition duration-200 ease-in-out w-full hover:bg-rose-100 dark:hover:bg-rose-900/80 hover:text-rose-700 dark:hover:text-rose-200;
   }
 
   /* Add this in your Tailwind CSS config or custom styles */
