--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -14,11 +14,11 @@
     class="h-[calc(100%-2.5rem)] flex flex-col overflow-y-auto p-4 bg-slate-50 dark:bg-slate-800 border dark:border-slate-700 m-5 mr-0 rounded-lg shadow-xl"
   >
     <div class="mb-4 text-xl font-bold mx-2 mt-2">
-      <span class="text-indigo-500">Team</span><span>Runner</span>
+      <span class="text-indigo-600 dark:text-indigo-500">Team</span><span>Runner</span>
     </div>
 
     <!-- Main navigation links -->
-    <div class="mb-6 space-y-1.5">
+    <div class="mb-6">
       <%= link_to profile_path, aria: { current: current_is_profile ? 'page' : nil }, class: "group sidebar-link #{'sidebar-link-active' if current_is_profile}" do %>
         <%= render 'shared/user_photo', user: current_user, size: :thumb, icon_background: :none, icon_filled: current_is_profile, icon_name: 'profile', image_classes: "dark:group-focus:text-white #{'motion-safe:group-hover:bounce-animation motion-safe:group-focus:bounce-animation' unless current_is_profile}" %>
         <span>Profile</span>
