--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -56,7 +56,7 @@
     <div class="flex items-center gap-2 mx-3">
       <%= inline_svg_tag 'icons/lightning.svg', class: 'size-5 text-slate-500' %>
       <span>
-        <span class="font-mono" data-calculate-pace-target="pace"><%= form.object.new_record? ? 'XX:XX' : clock_time_display(run.pace_per_mile) %></span>
+        <span class="font-mono" data-calculate-pace-target="pace"><%= form.object.persisted? && run.duration? ? clock_time_display(run.pace_per_mile) : 'XX:XX' %></span>
         <span class="text-soft text-sm">/mi</span>
       </span>
     </div>
